kubernetes-dev/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserv # Name of the deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserv
  template:
    metadata:
      labels:
        app: webserv
    spec:
      containers:
        - name: webserv # Name of the container
          image: game:dev # Image name
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
