kubernetes-dev/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis # Name of the deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis # Name of the container
          image: redis:6.2-alpine # Image name
          ports:
            - containerPort: 6379
