kubernetes-dev/webserv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserv
spec:
  selector:
    app: webserv
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
